--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ input[type="submit"]:hover {
 
 
 /* Media Query */
-@media(max-width: 768px) {
+@media (max-width: 768px) {
   body {
     box-sizing: border-box;
     /* overflow: hidden; */
@@ -298,7 +298,7 @@ input[type="submit"]:hover {
   .hero-image{
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
   }
 
   .image {
@@ -309,6 +309,7 @@ input[type="submit"]:hover {
     width: 100%;
     height: auto;
     display: block;
+    object-fit: cover;
   }
 
   .profil-me{
