--- a/style.css
+++ b/style.css
@@ -314,6 +314,13 @@ input[type="submit"]:hover {
     align-items: center;
   }
 
+  .profil{
+    display: inline;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+  }
+
   .description{
     margin: 0;
   }
@@ -348,6 +355,10 @@ input[type="submit"]:hover {
     font-size: 14px;
     padding-top: 15px;
     text-align: center;
+  }
+
+  form{
+    width: 200px;
   }
 }
 
