--- a/style.css
+++ b/style.css
@@ -359,6 +359,9 @@ input[type="submit"]:hover {
 
   form{
     width: 200px;
+    padding: 0;
+    display: flex;
+    justify-content: center;
   }
 }
 
