--- a/style.css
+++ b/style.css
@@ -358,10 +358,14 @@ input[type="submit"]:hover {
   }
 
   form{
-    width: 200px;
+    width: 250px;
     padding: 0;
     display: flex;
     justify-content: center;
+  }
+
+  input[type="submit"]{
+    width: inherit;
   }
 }
 
