--- a/style.css
+++ b/style.css
@@ -358,14 +358,15 @@ input[type="submit"]:hover {
   }
 
   form{
-    width: 300px;
+    width: 250px;
     padding: 0;
+    margin: 0;
     display: flex;
     justify-content: center;
   }
 
   input[type="submit"]{
-    width: 300px;
+    width: 200px;
   }
 }
 
