--- a/style.css
+++ b/style.css
@@ -357,8 +357,11 @@ input[type="submit"]:hover {
     text-align: center;
   }
 
+  .form {
+    width: 100%;
+  }
   .form form{
-    width: 250px;
+    width: 50%;
     padding: 0;
     margin: 0;
     display: flex;
@@ -367,7 +370,7 @@ input[type="submit"]:hover {
   }
 
   input[type="submit"]{
-    width: 250px;
+    width: inherit;
   }
 }
 
