--- a/style.css
+++ b/style.css
@@ -360,17 +360,24 @@ input[type="submit"]:hover {
   .form {
     width: 100%;
   }
-  .form form{
-    width: 50%;
+  .form form {
+    width: 90%;
+    max-width: 400px;
+    margin: 20px auto;
     padding: 0;
-    margin: 0;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    align-items: stretch;
   }
 
   input[type="submit"]{
     width: inherit;
+  }
+
+  form input,
+  form textarea {
+    width: 100%;
+    box-sizing: border-box;
   }
 }
 
